<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
        <TextureView
            android:id="@+id/texture_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.arcsoft.arcfacedemo.widget.FaceRectView
            android:id="@+id/face_rect_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_fragment"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:background="@color/colorTheme"
                app:contentInsetStart="0.0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <!--// app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"可以出水波纹-->
                <TextView
                    android:id="@+id/sms_interceptor_title_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="人脸采集"
                    android:textAppearance="@style/ToolBar.Title"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:id="@+id/ll_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="left"
                    android:layout_marginLeft="3dp"
                    android:visibility="visible">
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:contentDescription=""
                        android:src="@mipmap/ic_arrow_left"
                        android:scaleType="fitXY"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="返回"
                        android:textAppearance="@style/ToolBar.Title"
                        android:layout_marginLeft="3dp"/>

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/fl_sms_interceptor_title_menu_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_gravity="right"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/iv_sms_interceptor_title_menu_fragment"
                        android:layout_width="23dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription=""
                        />
                </FrameLayout>


            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arc_rate"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txt_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arc_score"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txt_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arc_tips"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txt_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>




    <Switch
        android:id="@+id/switch_liveness_detect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:text="@string/liveness_detect"
        android:visibility="gone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:onClick="register"
        android:text="@string/register"
        android:visibility="gone"
  />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</FrameLayout>